tests/ui/resolve/resolve-conflict-extern-crate-vs-extern-crate.rs
//@ edition: 2015
extern crate std;
//~^ ERROR the name `std` is defined multiple times

fn main(){}

// ferrocene-annotations: fls_maw4u1o8q37u
// Crates
